--- a/views/layout.jade
+++ b/views/layout.jade
@@ -77,8 +77,8 @@ html.no-js(lang='ko')
                 a(href='/')
                   img(src='/img/logo/logo.png', alt='')
                 span#currentTimeSpan(style='margin-right: 30px')
-                a(href='/')
-                  img(src='/speaker2.png', alt='')
+                a
+                  img#speaker(src='/speaker2.png', onclick='changeStatus()')
                 
             .col-lg-4.col-md-4.col-sm-12.col-xs-12
               .header-top-menu.align-middle
